syntax = "proto3";

package proto;

service SeasonUpdate {
	rpc SeasonUpdate (SeasonUpdates) returns (Empty) {}
}

service LiveStatUpdate {
	rpc GetGame (Game) returns (SavedGame) {}
	rpc GetStat (Stat) returns (SavedStat) {}
}

service SeasonContext {
	rpc GetContext(Empty) returns (FullContext) {}
}

message Empty {}

message Team {
	int32 lcsid = 2;
	int32 riotid = 3;
	string name = 4;
	string tag = 5;
}

message Player {
	int32 lcsid = 2;
	int32 riotid = 3;
	string name = 4;
	int32 teamid = 5;
	string position = 6;
	repeated string addlpos = 7;
}

message Game {
	int32 lcsid = 2;
	string riotgameid = 3;
	string riotmatchid = 4;
	int32 redteamid = 5;
	int32 blueteamid = 6;
	int64 gamestart = 7;
	int64 gameend = 8;
}

message Stat {
	string riotname = 2;
}

message SavedTeam {
	Team team = 1;
	int32 teamid = 2;
}

message SavedPlayer {
	Player player = 1;
	int32 playerid = 2;
}

message SavedGame {
	Game game = 1;
	int32 gameid = 2;
}

message SavedStat {
	Stat stat = 1;
	int32 statid = 2;
}

message SeasonUpdates {
	repeated Team teams = 1;
	repeated Player players = 2;
}

message FullContext {
	repeated SavedTeam teams = 1;
	repeated SavedPlayer players = 2;
	repeated SavedGame games = 3;
	repeated SavedStat stats = 4;
}
